--- a/01-playbook.yml
+++ b/01-playbook.yml
@@ -1,8 +1,7 @@
 - name: "ping the file"
-  
-  host: "frontend"
+  host: frontend
   tasks:
-    - name: "ping"
-      ansible.builtin.ping:
+  - name: "ping"
+    ansible.builtin.ping:
 
 
