--- a/variables.yml
+++ b/variables.yml
@@ -14,15 +14,28 @@
 
 
 
+# - name: print variables
+#   hosts: local
+#   connection: local
+#   tasks:
+#     - name: print variables all
+#       vars:
+#         course: ansible
+#         duration: 10days
+#         triner: siva
+#       ansible.builtin.debug:
+#         msg: "course name : {{ course }} , duration : {{ duration }} , triner: {{ triner }}"
+
+
+
 - name: print variables
   hosts: local
   connection: local
+  course_file:
+  - vars_file.yml
+
   tasks:
     - name: print variables all
-      vars:
-        course: ansible
-        duration: 10days
-        triner: siva
       ansible.builtin.debug:
         msg: "course name : {{ course }} , duration : {{ duration }} , triner: {{ triner }}"
       
