--- a/variables.yml
+++ b/variables.yml
@@ -41,23 +41,34 @@
 
 
 
+# - name: print hide passwd
+#   hosts: local
+#   connection: local
+#   vars_prompt:
+#     - name: username
+#       prompt: what is your name
+#       private: false
+
+#     - name: password
+#       prompt: what is your passwd
+#       private: true
+
+#   tasks:
+#     - name: print variables all
+#       ansible.builtin.debug:
+#         msg: "user name  is : {{ username }}  , password is : {{ password }}"
+
+
+
 - name: print variables
   hosts: local
   connection: local
-  vars_prompt:
-    - name: username
-      prompt: what is your name
-      private: false
 
-    - name: password
-      prompt: what is your passwd
-      private: true
 
   tasks:
     - name: print variables all
       ansible.builtin.debug:
-        msg: "user name  is : {{ username }}  , password is : {{ password }}"
-
+       msg: "course name : {{ course}} , duration : {{ duration }} , triner: {{ triner }}"
 
 
 
