--- a/inventry.ini
+++ b/inventry.ini
@@ -4,7 +4,7 @@
 [localhost]
 local
 
-[local_vars]
- course: ansible
- duration: 10days
- triner: siva
+[local:vars]
+ course=ansible
+ duration=10days
+ triner=siva
