--- a/datatypes.yml
+++ b/datatypes.yml
@@ -12,3 +12,7 @@
     concepts:
       cloud: aws
       cm: ansible
+  tasks:
+    - name: "print course info"
+      ansible.builtin.debug:
+      msg: "tools loke {{ tools }} , course: {{ course }} , is_live: {{ is_live }} ,the concepts are {{concepts}} "
