--- a/conditions.yml
+++ b/conditions.yml
@@ -14,10 +14,11 @@
 - name: "gather the facts"
   hosts: local
   connection: local
+  become: yes
   tasks:
-    name: "install nginx if redhat"
-    ansible.builtin.dnf:
+    - name: "install nginx if redhat"
+      ansible.builtin.dnf:
       name: nginx
       state: latest
-    when: ansible_os_family= "redhat"
+      when: ansible_os_family= "redhat"
             
