--- a/conditions.yml
+++ b/conditions.yml
@@ -19,6 +19,6 @@
     - name: "install nginx if redhat"
       ansible.builtin.dnf:
       name: nginx
-      state: latest
+      state: present
       when: ansible_os_family= "redhat"
             
