--- a/conditions.yml
+++ b/conditions.yml
@@ -16,9 +16,20 @@
   connection: local
   become: yes
   tasks:
-    - name: "install nginx if redhat"
+    - name: install nginx if RedHat
       ansible.builtin.dnf:
       name: nginx
       state: present
-      when: ansible_os_family= "redhat"
+      when: ansible_os_family= "RedHat"
+
+
+
+
+
+# - name: install nginx if redhat
+#   ansible.builtin.dnf:
+#     name: nginx
+#     state: present
+#   when: ansible_facts['os_family'] == "RedHat"
+
             
