--- a/conditions.yml
+++ b/conditions.yml
@@ -20,7 +20,7 @@
       ansible.builtin.dnf:
         name: nginx
         state: latest
-      when: ansible_os_family= RedHat
+      when: ansible_os_family == "RedHat"
 
 
 
