--- a/loops.yml
+++ b/loops.yml
@@ -15,17 +15,33 @@
 
 
 
+# - name: install packages
+#   hosts: local
+#   connection: local
+#   become: yes
+#   tasks:
+#     - name: istall packages 
+#       ansible.builtin.package:
+#         name: "{{ item }}"
+#         state: latest
+        
+#       loop:
+#         - nginx
+#         - mysql
+#         - zip
+
+
+
+
 - name: install packages
   hosts: local
   connection: local
   become: yes
   tasks:
-    - name: istall packages 
+    - name: install packages
       ansible.builtin.package:
-        name: "{{ item }}"
-        state: latest
-        
+        name: "{{ item.name }}"
+        state: "{{ item.state }}"
       loop:
-        - nginx
-        - mysql
-        - zip
+        - {name: "nginx" , state: "latest"}
+        - {name: "zip" , state: "absent"}
