--- a/roboshop_Ansible/inventry.ini
+++ b/roboshop_Ansible/inventry.ini
@@ -7,6 +7,29 @@ redis.lakshmimopidevi.fun
 [mysql]
 mysql.lakshmimopidevi.fun
 
+[rabbitmq]
+rabbitmq.lakshmimopidevi.fun
+
+[Catalogue]
+Catalogue.lakshmimopidevi.
+
+[user]
+user.lakshmimopidevi.fun
+
+[cart]
+cart.lakshmimopidevi.fun
+
+[shipping]
+shipping.lakshmimopidevi.fun
+
+[payment]
+payment.lakshmimopidevi.fun
+
+[frontend]
+frontend.lakshmimopidevi.fun
+
+
+
 [localhost]
 local
 
