--- a/roboshop_Ansible/inventry.ini
+++ b/roboshop_Ansible/inventry.ini
@@ -11,7 +11,7 @@ mysql.lakshmimopidevi.fun
 rabbitmq.lakshmimopidevi.fun
 
 [Catalogue]
-Catalogue.lakshmimopidevi.
+Catalogue.lakshmimopidevi.fun
 
 [user]
 user.lakshmimopidevi.fun
