--- a/roboshop_Ansible/rabbitmq.yml
+++ b/roboshop_Ansible/rabbitmq.yml
@@ -6,7 +6,7 @@
     - name: copy rabbitmq file
       ansible.builtin.copy:
         src:  rabbitmq.repo
-        dest: /etc/yum.repos.d./rabbitmq.repo
+        dest: /etc/yum.repos.d/rabbitmq.repo
 
     - name: Install RabbitMQ
       ansible.builtin.package:
