--- a/roboshop_Ansible/inventry.ini
+++ b/roboshop_Ansible/inventry.ini
@@ -10,8 +10,8 @@ mysql.lakshmimopidevi.fun
 [rabbitmq]
 rabbitmq.lakshmimopidevi.fun
 
-[Catalogue]
-Catalogue.lakshmimopidevi.fun
+[catalogue]
+catalogue.lakshmimopidevi.fun
 
 [user]
 user.lakshmimopidevi.fun
