--- a/roboshop_Ansible/Catalogue.yml
+++ b/roboshop_Ansible/Catalogue.yml
@@ -71,7 +71,7 @@
         state: present
 
     - name: connect mongodb to catalogue
-      ansible.builtin.command: INDEX=$(mongosh mongodb.daws86s.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')")
+      ansible.builtin.command: INDEX=$(mongosh mongodb.lakshmimopidevi.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')")
       register: catalogue_output
 
     - name: load products in mongodb
