--- a/roboshop_Ansible/shipping.yml
+++ b/roboshop_Ansible/shipping.yml
@@ -12,7 +12,7 @@
     - name: create system user
       ansible.builtin.user:
         name: roboshop
-        component: roboshop system user
+        comment: roboshop system user
         system: true
         shell: /sbin/nologin
         home: /app    
