--- a/roboshop_Ansible/payment.yml
+++ b/roboshop_Ansible/payment.yml
@@ -66,7 +66,7 @@
         name: payment
         state: started
         enable: yes
-        daemon-reload: true
+        deamon-reload: true
 
 
 
