--- a/roboshop_Ansible/user.yml
+++ b/roboshop_Ansible/user.yml
@@ -66,6 +66,9 @@
         name: user
         state: started
         enable: yes
-        daemon_reload: yes
+        
+    - name: daemon reload
+      ansible.builtin.systemd:
+      daemon_reload: yes
 
 
