--- a/roboshop_Ansible/user.yml
+++ b/roboshop_Ansible/user.yml
@@ -61,12 +61,17 @@
         dest: /etc/systemd/system/user.service
 
 
-    - name: deamon-reload
+    # - name: deamon-reload
+    #   ansible.builtin.service:
+    #     name: user
+    #     state: started
+    #     enable: yes
+        
+    - name: start ans enable user service
       ansible.builtin.service:
         name: user
         state: started
-        enable: yes
-        
+        enabled: yes
     # - name: daemon reload
     #   ansible.builtin.systemd:
     #   daemon_reload: yes
