--- a/roboshop_Ansible/cart.yml
+++ b/roboshop_Ansible/cart.yml
@@ -16,7 +16,7 @@
         state: present
 
     - name: create system cart
-      ansible.builtin.cart:
+      ansible.builtin.user:
         name: roboshop
         comment: roboshop system cart
         system: true
