--- a/roboshop_Ansible/cart.yml
+++ b/roboshop_Ansible/cart.yml
@@ -69,9 +69,9 @@
         # daemon-reload: true
 
 
-    - name: start ans enable user service
+    - name: start ans enable cart service
       ansible.builtin.service:
-        name: user
+        name: cart
         state: started
         enabled: yes
 
