--- a/roboshop_Ansible/shipping.yml
+++ b/roboshop_Ansible/shipping.yml
@@ -52,7 +52,7 @@
         chdir: /app
 
     - name: move jar file
-      ansible.builtin.command: mv target/shipping-1.0.jar shipping.jar
+      ansible.builtin.command: mv target/*.jar shipping.jar
 
     - name: copy service file
       ansible.builtin.copy:
